# cmake-recipes-mytest

./: CMakeLists.txt  mytest.cpp
cmake/: googletest.cmake
